fixed overflow in parallax effect

--- a/src/routes/Home/components/SideScroll/sidescroll.module.scss
+++ b/src/routes/Home/components/SideScroll/sidescroll.module.scss
@@ -16,6 +16,7 @@
     white-space: nowrap;
     display: flex;
     flex-wrap: nowrap;
+    width: 100%;
   }
   
   .parallax .scroller {
